--- a/pom.xml
+++ b/pom.xml
@@ -53,14 +53,17 @@
 		
 	</dependencies>
 
- <build>
-      <plugins>
-         <plugin>
+<build>
+    <plugins>
+        <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.8.0</version>
-         </plugin>
-      </plugins>
-   </build>
+            <configuration>
+                <source>3.8.0</source>
+                <target>3.8.0</target>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 
 </project>
