--- a/pom.xml
+++ b/pom.xml
@@ -55,15 +55,19 @@
 
 <build>
     <plugins>
-        <plugin>
+         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-                <source>3.8</source>
-                <target>3.8</target>
-            </configuration>
-        </plugin>
+            <version>3.8.0</version>
+         </plugin>
     </plugins>
 </build>
+
+
+	   <properties>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <maven.compiler.target>11</maven.compiler.target>
+      <maven.compiler.source>11</maven.compiler.source>
+   </properties>
 
 </project>
