--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>autenticacion</name>
 	<description>login y sesion</description>
 	<properties>
-		<java.version>8</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -53,30 +53,14 @@
 		
 	</dependencies>
 
-<build>
-    <plugins>
-          <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.2</version>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                    <testSource>1.8.0</testSource>
-                    <testTarget>1.8.0</testTarget>
-                    <showDeprecation>true</showDeprecation>
-                    <compilerArgument>-Xlint:unchecked</compilerArgument>
-                </configuration>
-            </plugin>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 
-
-		<plugin>
-        <groupId>com.heroku.sdk</groupId>
-        <artifactId>heroku-maven-plugin</artifactId>
-        <version>3.0.3</version>
-      </plugin>
-
-    </plugins>
-</build>
 
 </project>
